<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/add_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_title"
        android:gravity="center"
        android:textSize="30sp"

        tools:text="@string/add_title" />

    <Button
        android:id="@+id/add_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:text="@string/add_save_text"
        android:onClick="onClick"/>

    <EditText
        android:id="@+id/add_putin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/add_put"
        android:textSize="20sp"/>





</LinearLayout>