<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_title"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_text" />

    <Button
        android:id="@+id/edit_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:text="@string/add_save_text"
        android:onClick="onClick"/>


    <EditText
        android:id="@+id/edit_putin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/add_put"
        android:textSize="20sp"/>

</LinearLayout>